# CppSTK

./: CMakeCache.txt  CMakeLists.txt  CppSTK  Makefile  README.md  SuperTuxKart  cmake_install.cmake  main.cpp  run.sh
Source/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
imgs/: tuxi.xcf  yoshi.xcf
